oauthServer/src/main/resources/kubernetes/OAuth2ServerIngress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-oauth-auth-server
  namespace: api-service
  labels:
    app: api-oauth-auth-server
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: 'letsencrypt-oauth-prod'
spec:
  tls:
    - hosts:
        - auth.notypie.dev
      secretName: oauth-notypie-dev-tls
  rules:
    - host: auth.notypie.dev
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: api-oauth-server-svc
                port:
                  number: 80
